# Infinity

./: .breakpoints  README.md  Weblogs.json  allowedKeys.json  ceplid_tools.py  keep_alive.py  key_gen.py  main.py  prefixes.json  pyproject.toml  tools.py
cogs/: CEPLID.py  Moderation.py  Tags.py  bot2.py  main_cog.py  main_slash.py  moderation-slash.py  rtfm.py
templates/: 4162_config.json  activity-searcher.html  activity.html  data-use.html  homepage.html  the-game.html
