[tool.poetry]
name = "repl_python3_tag-team"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
pyfiglet = "^0.8.post1"
replit = "^3.2.4"
aiohttp = "^3.7.4"
discord = "^1.7.3"
keep = "^2.10.1"
django-buttons = "^0.9.2"
discord-py-interactions = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
